--- a/index.html
+++ b/index.html
@@ -498,6 +498,7 @@
               type="email"
               name="footer-email"
               placeholder="E-mail"
+              required
             />
             <button class="btn newsletter__btn" type="submit" aria-label="Кнопка подписаться">
               Подписаться
