--- a/index.html
+++ b/index.html
@@ -75,49 +75,49 @@
       <!-- Секция преимуществ -->
       <section class="section advantage">
         <div class="container">
-          <h2 class="advantage__title visually-hidden">Преимущества</h2>
-          <ul class="feature-list">
-            <li class="feature-list__item">
-              <div class="feature-list__icon--bg" aria-label="Рисунок антенны">
-                <svg class="feature-list__icon" width="70" height="70">
+          <h2 class="title visually-hidden">Преимущества</h2>
+          <ul class="advantage__list">
+            <li class="advantage__item">
+              <div class="advantage__icon--bg" aria-label="Рисунок антенны">
+                <svg class="advantage__icon" width="70" height="70">
                   <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
-              <h3 class="feature-list__title">Внимание к деталям</h3>
-              <p class="feature-list__text">
+              <h3 class="advantage__title">Внимание к деталям</h3>
+              <p class="advantage__text">
                 Идейные соображения, а также начало повседневной работы по формированию позиции.
               </p>
             </li>
-            <li class="feature-list__item">
-              <div class="feature-list__icon--bg" aria-label="Рисунок часов">
-                <svg class="feature-list__icon" width="70" height="70">
+            <li class="advantage__item">
+              <div class="advantage__icon--bg" aria-label="Рисунок часов">
+                <svg class="advantage__icon" width="70" height="70">
                   <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
-              <h3 class="feature-list__title">Пунктуальность</h3>
-              <p class="feature-list__text">
+              <h3 class="advantage__title">Пунктуальность</h3>
+              <p class="advantage__text">
                 Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
               </p>
             </li>
-            <li class="feature-list__item">
-              <div class="feature-list__icon--bg" aria-label="Рисунок диаграммы">
-                <svg class="feature-list__icon" width="70" height="70">
+            <li class="advantage__item">
+              <div class="advantage__icon--bg" aria-label="Рисунок диаграммы">
+                <svg class="advantage__icon" width="70" height="70">
                   <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
-              <h3 class="feature-list__title">Планирование</h3>
-              <p class="feature-list__text">
+              <h3 class="advantage__title">Планирование</h3>
+              <p class="advantage__text">
                 Равным образом консультация с широким активом в значительной степени обуславливает.
               </p>
             </li>
-            <li class="feature-list__item">
-              <div class="feature-list__icon--bg" aria-label="Рисунок астронафта">
-                <svg class="feature-list__icon" width="70" height="70">
+            <li class="advantage__item">
+              <div class="advantage__icon--bg" aria-label="Рисунок астронафта">
+                <svg class="advantage__icon" width="70" height="70">
                   <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
-              <h3 class="feature-list__title">Современные технологии</h3>
-              <p class="feature-list__text">
+              <h3 class="advantage__title">Современные технологии</h3>
+              <p class="advantage__text">
                 Значимость этих проблем настолько очевидна, что реализация плановых заданий.
               </p>
             </li>
@@ -127,7 +127,7 @@
       <!-- Секция изображений о специализации -->
       <section class="section gallery">
         <div class="container">
-          <h2 class="gallery__title">Чем мы занимаемся</h2>
+          <h2 class="title gallery__title">Чем мы занимаемся</h2>
           <ul class="gallery__list">
             <li class="gallery__item">
               <img
@@ -162,7 +162,7 @@
       <!-- Секция наша команда -->
       <section class="section team">
         <div class="container">
-          <h2 class="team__title">Наша команда</h2>
+          <h2 class="title team__title">Наша команда</h2>
           <ul class="card-list">
             <li class="card-list__item">
               <img
@@ -380,7 +380,7 @@
       </section>
       <section class="section client">
         <div class="container">
-          <h2 class="client__title">Постоянные клиенты</h2>
+          <h2 class="title client__title">Постоянные клиенты</h2>
           <ul class="client__list">
             <li class="client__item">
               <a href="" class="client__link" aria-label="Клиент 1">
@@ -496,7 +496,7 @@
             <input
               class="newsletter__input"
               type="email"
-              name="footer-email"
+              name="newsletter-email"
               placeholder="E-mail"
               required
             />
