--- a/portfolio.html
+++ b/portfolio.html
@@ -70,23 +70,23 @@
       <!-- Главная секция -->
       <section class="section portfolio">
         <div class="container">
-          <h1 class="visually-hidden portfolio__title">Портфолио</h1>
+          <h1 class="title visually-hidden">Портфолио</h1>
           <!-- фильтр -->
-          <ul class="filtr-list">
-            <li class="filtr-list__item">
-              <button class="filtr-list__btn filtr-list__btn--active" type="button">Все</button>
+          <ul class="portfolio__filtr">
+            <li class="portfolio__item">
+              <button class="portfolio__btn portfolio__btn--active" type="button">Все</button>
             </li>
-            <li class="filtr-list__item">
-              <button class="filtr-list__btn" type="button">Веб-сайты</button>
+            <li class="portfolio__item">
+              <button class="portfolio__btn" type="button">Веб-сайты</button>
             </li>
-            <li class="filtr-list__item">
-              <button class="filtr-list__btn" type="button">Приложения</button>
+            <li class="portfolio__item">
+              <button class="portfolio__btn" type="button">Приложения</button>
             </li>
-            <li class="filtr-list__item">
-              <button class="filtr-list__btn" type="button">Дизайн</button>
+            <li class="portfolio__item">
+              <button class="portfolio__btn" type="button">Дизайн</button>
             </li>
-            <li class="filtr-list__item">
-              <button class="filtr-list__btn" type="button">Маркетинг</button>
+            <li class="portfolio__item">
+              <button class="portfolio__btn" type="button">Маркетинг</button>
             </li>
           </ul>
           <ul class="project-list">
@@ -355,7 +355,7 @@
             <input
               class="newsletter__input"
               type="email"
-              name="footer-email"
+              name="newsletter-email"
               placeholder="E-mail"
               required
             />
